# ping-tuber-kai

./: .gitignore  CLAUDE.md  README.md  architecture.drawio  architecture_diagram_notes.md  pyproject.toml
.github/workflows/: ci.yml
assets/mouth/: README.md
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  TECH_STACK.md  VOICEVOX_API.md
scripts/: generate_placeholder_images.py  test_pygame_display.py
src/ping_tuber_kai/: __init__.py  config.py  main.py
src/ping_tuber_kai/lipsync/: __init__.py  phoneme.py  scheduler.py  viseme.py
src/ping_tuber_kai/output/: __init__.py  obs_websocket.py  pygame_window.py
src/ping_tuber_kai/player/: __init__.py  audio.py  sync.py
src/ping_tuber_kai/ui/: __init__.py  app.py
src/ping_tuber_kai/voicevox/: __init__.py  client.py  models.py
tests/: test_lipsync.py  test_player.py  test_voicevox.py
