[project]
name = "ping-tuber-kai"
version = "0.1.0"
description = "VOICEVOX母音リップシンクを活用したPNGTuber"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "numpy>=2.0.0",
    "pygame>=2.6.0",
]

[project.optional-dependencies]
obs = [
    "obsws-python>=1.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[project.scripts]
ping-tuber = "ping_tuber_kai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ping_tuber_kai"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E741"]  # Allow I, O as enum names (AIUEO vowels)

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
